<resources>
    <string name="app_name">My Application</string>
    <string name="manage_your_expense">Manage Your Expense</string>
    <string name="latest_expense_25_0_usd" translatable="false">Latest expense: 25.0 USD</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="add_expense">Add Expense</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter amount</string>
    <string name="currency">Currency</string>
    <string name="enter_currency">Enter Currency</string>
    <string name="category">Category</string>
    <string name="enter_category">Enter Category</string>
    <string name="remark">Remark</string>
    <string name="enter_remark">Enter Remark</string>
    <string name="add">Add</string>
    <string name="expense_detail">Expense Detail</string>
    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="expense_list">Expense List</string>
    <string name="language">Language:</string>
    <string name="home">Home</string>
    <string name="view">View</string>
    <string name="setting">Setting</string>
    <string name="choose_your_preferred_language" translatable="false">Choose your preferred language</string>
    <string name="select_app_color_scheme" translatable="false">Select app color scheme</string>
    <string name="default_reminder" translatable="false">Default Reminder</string>
    <string name="set_reminder_time_before_task_deadline" translatable="false">Set reminder time before task deadline</string>
    <string name="backup_tasks" translatable="false">Backup Tasks</string>
    <string name="backup_tasks_summary" translatable="false">Click to backup your tasks to a JSON file</string>
    <string name="loading_tasks" translatable="false">Loading tasks...</string>
    <string name="tasks_have_been_backed_up_successfully" translatable="false">Tasks have been backed up successfully!</string>
    <string name="unsynced_tasks" translatable="false">Unsynced Tasks</string>
    <string name="unsynced_tasks_summary" translatable="false">%1$d tasks pending sync</string>
</resources>