<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#F5F6F8"
    tools:context=".fragment.HomeFrag">



    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_your_expense"
        android:textSize="42sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/LatestExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest_expense_25_0_usd"
        android:textSize="24sp"/>

    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"/>


    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:backgroundTint="#000000"
        android:layout_marginTop="10dp"
        android:text="@string/log_out" />

</LinearLayout>